--- a/src/services/Polaris.Api/Properties/launchSettings.json
+++ b/src/services/Polaris.Api/Properties/launchSettings.json
@@ -11,7 +11,7 @@
 
     "Polaris.Api": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:5501",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
